# sead_change_control

./: .gitattributes  .gitignore  .releaserc  .sqlfluff  .tbls.yml  01_setup_initial_staging.ipynb  02_setup_bugs_import_value_translations.psql  AGENTS.md  CHANGELOG.md  CHANGES.md  FORGETMENOT.md  Makefile  README.md  RELEASE-NOTES.md  bugs_import.ipynb  change_requests.ipynb  change_requests_sql_scripts.ipynb  copydb.sh  deploy_staging.bash  deploy_staging.sh  docker-sqitch.sh  humlab_utility.sql  projects.txt  renamer.py  scratch-pad.sql  sead_production_public.sql  sqitch.bat  sqitch.conf  sqitch.sh  sqitch_helper.py  sqitch_history.txt  sqitch_setup.ipynb  sqitch_setup_user.bash  sql_scratchpad.ipynb  tbl_abundance_elements.sql
.github/: copilot-instructions.md
.sqitch/: sqitch.conf
adna/: sqitch.plan
archaeobotany/: sqitch.plan
bugs/: @2023.12-post-deploy-hook  @2023.12-pre-deploy-hook  sqitch.conf  sqitch.plan
ceramics/: sqitch.plan
dendrochronology/: sqitch.plan
docs/: project-review-2026-01-20.md
facet/: sqitch.plan
general/: sqitch.plan
isotope/: sqitch.plan
mal/: README.md  sqitch.plan
notebooks/: db.py  sqitch.ipynb
pending/: FACET_metainformation.sql  bugs_errors_investigation.sql  find_deps.sql  pending.sql
radiocarbon/: sqitch.plan
report/: sqitch.plan
resources/: tables_and_columns.csv  tables_and_columns_old.xlsx
src/: export_excel_sheets.py  load_diff.py  pyproject.toml
src/compare/: config.json  default-config.jsonc  public.json
src/notebooks/: __init__.py
src/sead_utility/: compare_options.py
(+1185 files in other folders)
