[tool.poetry]
name = "sead-utility"
version = "0.1.0"
description = ""
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]
readme = "README.md"
packages = [{include = "sead_utility"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
psycopg2 = "^2.9.5"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
